[package]
name = "cli_course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.24.0"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.4.1"
eyre = "0.6.8"
indicatif = "0.17.7"
inquire = "0.6.2"
rand = "0.8.5"
termcolor = "1.3.0"
